# backend/congress_api/models/bill_metadata.py
@@ -1,14 +1,15 @@
 # coding: utf-8
 
 from __future__ import absolute_import
-
 from datetime import date, datetime  # noqa: F401
-from typing import Dict, List  # noqa: F401
 
-from congress_api import util
+from typing import List, Dict  # noqa: F401
+
 from congress_api.models.base_model_ import Model
-from congress_api.models.bill_version_metadata import BillVersionMetadata  # noqa: E501
+from congress_api.models.bill_version_metadata import BillVersionMetadata
+from congress_api import util
 
+from congress_api.models.bill_version_metadata import BillVersionMetadata  # noqa: E501
 
 class BillMetadata(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -16,22 +17,11 @@ class BillMetadata(Model):
     Do not edit the class manually.
     """
 
-    def __init__(
-        self,
-        legislation_type=None,
-        congress=None,
-        number=None,
-        title=None,
-        legislation_id=None,
-        legislation_versions=None,
-        chamber=None,
-    ):  # noqa: E501
+    def __init__(self, legislation_type=None, number=None, title=None, legislation_id=None, legislation_versions=None, congress=None, chamber=None, usc_release_id=None):  # noqa: E501
         """BillMetadata - a model defined in OpenAPI
 
         :param legislation_type: The legislation_type of this BillMetadata.  # noqa: E501
         :type legislation_type: str
-        :param congress: The congress session of this BillMetadata.  # noqa: E501
-        :type congress: int
         :param number: The number of this BillMetadata.  # noqa: E501
         :type number: int
         :param title: The title of this BillMetadata.  # noqa: E501
@@ -40,37 +30,46 @@ class BillMetadata(Model):
         :type legislation_id: int
         :param legislation_versions: The legislation_versions of this BillMetadata.  # noqa: E501
         :type legislation_versions: List[BillVersionMetadata]
+        :param congress: The congress of this BillMetadata.  # noqa: E501
+        :type congress: int
+        :param chamber: The chamber of this BillMetadata.  # noqa: E501
+        :type chamber: str
+        :param usc_release_id: The usc_release_id of this BillMetadata.  # noqa: E501
+        :type usc_release_id: int
         """
         self.openapi_types = {
-            "legislation_type": str,
-            "congress": int,
-            "number": int,
-            "title": str,
-            "legislation_id": int,
-            "legislation_versions": List[BillVersionMetadata],
-            "chamber": str,
+            'legislation_type': str,
+            'number': int,
+            'title': str,
+            'legislation_id': int,
+            'legislation_versions': List[BillVersionMetadata],
+            'congress': int,
+            'chamber': str,
+            'usc_release_id': int
         }
 
         self.attribute_map = {
-            "legislation_type": "legislation_type",
-            "congress": "congress",
-            "number": "number",
-            "title": "title",
-            "legislation_id": "legislation_id",
-            "legislation_versions": "legislation_versions",
-            "chamber": "chamber"
+            'legislation_type': 'legislation_type',
+            'number': 'number',
+            'title': 'title',
+            'legislation_id': 'legislation_id',
+            'legislation_versions': 'legislation_versions',
+            'congress': 'congress',
+            'chamber': 'chamber',
+            'usc_release_id': 'usc_release_id'
         }
 
         self._legislation_type = legislation_type
-        self._congress = congress
         self._number = number
         self._title = title
         self._legislation_id = legislation_id
         self._legislation_versions = legislation_versions
+        self._congress = congress
         self._chamber = chamber
+        self._usc_release_id = usc_release_id
 
     @classmethod
-    def from_dict(cls, dikt) -> "BillMetadata":
+    def from_dict(cls, dikt) -> 'BillMetadata':
         """Returns the dict as a model
 
         :param dikt: A dict.
@@ -100,27 +99,6 @@ class BillMetadata(Model):
         """
 
         self._legislation_type = legislation_type
-
-    @property
-    def congress(self):
-        """Gets the congress of this BillMetadata.
-
-
-        :return: The congress of this BillMetadata.
-        :rtype: int
-        """
-        return self._congress
-
-    @congress.setter
-    def congress(self, congress):
-        """Sets the congress of this BillMetadata.
-
-
-        :param congress: The congress of this BillMetadata.
-        :type congress: int
-        """
-
-        self._congress = congress
 
     @property
     def number(self):
@@ -207,9 +185,64 @@ class BillMetadata(Model):
         self._legislation_versions = legislation_versions
 
     @property
+    def congress(self):
+        """Gets the congress of this BillMetadata.
+
+
+        :return: The congress of this BillMetadata.
+        :rtype: int
+        """
+        return self._congress
+
+    @congress.setter
+    def congress(self, congress):
+        """Sets the congress of this BillMetadata.
+
+
+        :param congress: The congress of this BillMetadata.
+        :type congress: int
+        """
+
+        self._congress = congress
+
+    @property
     def chamber(self):
+        """Gets the chamber of this BillMetadata.
+
+
+        :return: The chamber of this BillMetadata.
+        :rtype: str
+        """
         return self._chamber
 
     @chamber.setter
     def chamber(self, chamber):
+        """Sets the chamber of this BillMetadata.
+
+
+        :param chamber: The chamber of this BillMetadata.
+        :type chamber: str
+        """
+
         self._chamber = chamber
+
+    @property
+    def usc_release_id(self):
+        """Gets the usc_release_id of this BillMetadata.
+
+
+        :return: The usc_release_id of this BillMetadata.
+        :rtype: int
+        """
+        return self._usc_release_id
+
+    @usc_release_id.setter
+    def usc_release_id(self, usc_release_id):
+        """Sets the usc_release_id of this BillMetadata.
+
+
+        :param usc_release_id: The usc_release_id of this BillMetadata.
+        :type usc_release_id: int
+        """
+
+        self._usc_release_id = usc_release_id
